[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/race/SplatterArea.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=1]
resource_local_to_scene = true
radius = 0.1

[node name="SplatterArea" type="Area"]
monitorable = false
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
